--- a/index.css
+++ b/index.css
@@ -114,7 +114,28 @@ header nav ul li a:hover{
   padding: 50px 0;
   text-align: center;
 }
-
+.poster {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 20px;
+  text-align: center;
+}
+.poster-image {
+  max-width: 100%;
+  border-radius: 10px 10px 0 0;
+}
+.poster h1 {
+  font-size: 2em;
+  margin-bottom: 20px;
+  color: #333;
+}
+.poster p {
+  font-size: 1.2em;
+  color: #666;
+}
 footer {
   background-color: #333;
   color: #fff;
