--- a/index.css
+++ b/index.css
@@ -118,14 +118,17 @@ header nav ul li a:hover{
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
+  max-width: 100%;
   margin: 50px auto;
-  padding: 20px;
-  text-align: center;
+  overflow: hidden;
 }
 .poster-image {
-  max-width: 100%;
+  width: 100%;
+  display: block;
   border-radius: 10px 10px 0 0;
+}
+.content {
+  padding: 20px;
 }
 .poster h1 {
   font-size: 2em;
@@ -135,6 +138,7 @@ header nav ul li a:hover{
 .poster p {
   font-size: 1.2em;
   color: #666;
+}
 }
 footer {
   background-color: #333;
