--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5; /* Default background color */
+  background-color: transparent; /* Default background color */
 }
 
 .bg-img {
@@ -24,6 +24,7 @@ header {
   position: fixed;
   width: 100%;
   z-index: 1000;
+  background-color: transparent !important;
   transition: background-color 0.3s ease-in-out;
 }
 
@@ -55,7 +56,7 @@ header nav ul li {
 }
  
 header nav ul li a {
-  color: #f7f6f6;
+  color:transparent;
   text-decoration: none;
 }
 
@@ -66,18 +67,6 @@ header nav ul li a:hover{
 .search-icon {
   color: #fcf7f7;
   font-size: 24px;
-}
-
-.hero {
-  height: 500px; /* Adjust height as needed */
-  background-image: url('your-hero-image.jpg'); /* Add your hero image */
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  text-align: center;
 }
 
 .content {
@@ -233,6 +222,5 @@ footer p {
 }
 
 .navbar-scrolled {
-  background-color: #460694 !important;
+  background-color: #50e2a7 !important;
 }
-
